// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is checked 1`] = `
<span
  className="root MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root checked Mui-checked checkbox  css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <input
    checked={true}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={false}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="CheckBoxIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</span>
`;

exports[`is disabled 1`] = `
<span
  aria-disabled={true}
  className="root MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root disabled Mui-disabled root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root disabled Mui-disabled checkbox  css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
>
  <input
    checked={false}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`is small 1`] = `
<span
  className="root MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root checkbox testClass css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <input
    checked={false}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={false}
    id="rubiwin"
    name="rubiname"
    onChange={[Function]}
    type="checkbox"
    value="testValue"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`renders correctly props object 1`] = `
<span
  className="root MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root checkbox testClass css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <input
    checked={false}
    className="PrivateSwitchBase-input css-1m9pwf3"
    data-indeterminate={false}
    disabled={false}
    id="rubiwin"
    name="rubiname"
    onChange={[Function]}
    type="checkbox"
    value="testValue"
  />
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;
